# smooth-task-next

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  README  README.md  install_manifest.txt
applet/: CMakeLists.txt  plasma-applet-smooth-tasks.desktop  resources.qrc
applet/SmoothTasks/: Applet.cpp  Applet.h  ByShapeTaskbarLayout.cpp  ByShapeTaskbarLayout.h  CloseIcon.cpp  CloseIcon.h  DelayedToolTip.cpp  DelayedToolTip.h  ExpansionDirection.h  FadedText.cpp  FadedText.h  FixedItemCountTaskbarLayout.cpp  FixedItemCountTaskbarLayout.h  FixedSizeTaskbarLayout.cpp  FixedSizeTaskbarLayout.h  Global.cpp  Global.h  Light.cpp  Light.h  LimitSqueezeTaskbarLayout.cpp  LimitSqueezeTaskbarLayout.h  MaxSqueezeTaskbarLayout.cpp  MaxSqueezeTaskbarLayout.h  PlasmaToolTip.cpp  PlasmaToolTip.h  SmoothToolTip.cpp  SmoothToolTip.h  Task.cpp  Task.h  TaskIcon.cpp  TaskIcon.h  TaskItem.cpp  TaskItem.h  TaskStateAnimation.cpp  TaskStateAnimation.h  TaskbarLayout.cpp  TaskbarLayout.h  ToggleAnimation.cpp  ToggleAnimation.h  ToolTipBase.cpp  (+5 more)
applet/SmoothTasks/Ui/: Appearance.ui  General.ui
po/: CMakeLists.txt  Messages.sh  cs.gmo  cs.po  de.gmo  de.po  fr.gmo  fr.po  hu.gmo  hu.po  pl.gmo  pl.po  ru.gmo  ru.po  uk_UA.gmo  uk_UA.po  zh_CN.gmo  zh_CN.po
